--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-  "name": "hermit-md",
+  "name": "HYDRA",
   "version": "4.3.4",
-  "description": "Hermit-md - Simple whatsapp Multi Device bot based on @adiwajshing/baileys.",
+  "description": "HYDRA - Simple whatsapp Multi Device bot based on @adiwajshing/baileys.",
   "main": "index.js",
   "scripts": {
     "start": "pm2 start . --attach --name hermit-md"
   },
-  "author": "A-d-i-t-h-y-a-n",
+  "author": "ANU-SER",
   "license": "ISC",
   "dependencies": {
-    "@adiwajshing/baileys": "git+https://github.com/A-d-i-t-h-y-a-n/Baileys.js.git",
+    "@adiwajshing/baileys": "git+https://github.com/ANU-SER/Baileys.js.git",
     "@adiwajshing/keyed-db": "^0.2.4",
     "acrcloud": "^1.4.0",
     "axios": "^0.24.0",
